# lista-1

./: .gitignore  CMakeLists.txt
zad1/: CMakeLists.txt  main.cpp  test.cpp  zad1.cpp  zad1.h
zad2/: CMakeLists.txt  main.cpp  test.cpp  zad2.cpp  zad2.h
zad3/: CMakeLists.txt  main.cpp  test.cpp  zad3.cpp  zad3.h
zad4/: CMakeLists.txt  main.cpp  test.cpp  zad4.cpp  zad4.h
zad5/: CMakeLists.txt  main.cpp  test.cpp  zad5.cpp  zad5.h
zad6/: CMakeLists.txt  main.cpp  test.cpp  zad6.cpp  zad6.h
